--- a/config/database.yml
+++ b/config/database.yml
@@ -4,27 +4,33 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-default: &default
-  adapter: postgresql
-  encoding: utf8
-  database: project_development
-  pool: 5
-  timeout: 5000
-  username:
-  password:
-
-development:
-  adapter: postgresql
-  encoding: utf8
-  database: project_development
-  pool: 5
-  timeout: 5000
-  username:
-  password:
+#default: &default
+#  adapter: postgresql
+#  encoding: utf8
+#  database: project_development
+#  pool: 5
+#  timeout: 5000
+#  username:
+#  password:
 
 #development:
-#  <<: *default
-#  database: db/development.sqlite3
+#  adapter: postgresql
+#  encoding: utf8
+#  database: project_development
+#  pool: 5
+#  timeout: 5000
+#  username:
+#  password:
+
+default: &default
+  adapter: sqlite3
+  pool: 5
+  timeout: 5000
+
+development:
+  <<: *default
+  database: db/development.sqlite3
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
