Some of the updated files have not been checked from last commit. A lot of changes have been made to the layout, more polished content scrubbing, added individual article layout and display

--- a/config/sources/boliviaentusmanos.yml
+++ b/config/sources/boliviaentusmanos.yml
@@ -1,5 +1,5 @@
 source:   'boliviaentusmanos'
-src_name: 'Bolivia En Tus Manos'
+src_name: 'boliviaentusmanos.com'
 src_url:  'http://www.boliviaentusmanos.com'
 sections:
   economia:
