--- a/config/sources/eldeber.yml
+++ b/config/sources/eldeber.yml
@@ -4,14 +4,13 @@ src_url:  'http://www.eldeber.com.bo'
 sections:
   economia:
     section_url: 'http://www.eldeber.com.bo/economia'
-    score: 10
     feed-selectors:
       - 'div.article-module.category-article-main a.title.page-link'
       - 'div.listing.contentNews-listing.latest-listing.economia-listing.category-listing div.listing-title a.page-link'
     content-selectors:
       title:    'h1.title'
-      summary:  'h2.epigraph'
-      date:     { datetime: 'div#m251-1-252', fmt: '%d/%m/%Y%H:%M'}
+      deck:     'h2.epigraph'
+      date:     { datetime: 'div#m251-1-252' }
       img_url:  'div.captioned-image.image-article img'
       author:   'div.info div#m72-71-73'
       content:  'div.paragraphs'
@@ -24,7 +23,7 @@ sections:
       - 'div.listing.contentNews-listing.latest-listing.bolivia-listing.category-listing div.listing-title a.page-link'
     content-selectors:
       title:    'h1.title'
-      summary:  'h2.epigraph'
+      deck:     'h2.epigraph'
       date:     { datetime: 'div#m251-1-252', fmt: '%d/%m/%Y%H:%M'}
       img_url:  'div.captioned-image.image-article img'
       author:   'div.info div#m72-71-73'
